# Unlocking-Information-Creating-Synthetic-Data-for-Open-Access

./: .gitignore  .pre-commit-config.yaml  24321-0002_00.csv  README.md  RPAD_data.xlsx  Unlocking_Information_with_Synthetic_Data.py  crime_df.csv  ctgan_ray.ipynb  ctgan_ray_train.ipynb  data_gen.py  demo_data_creation.py  dev-requirements.txt  environment.yml  example_custom_constraint.py  fixed_params.py  intro_sd.py  metadata_file.json  playground.ipynb  playground.py  playground_ctgan.ipynb  playground_mlfit.ipynb  pyproject.toml  requirements.txt  st_app_talk.py  uk-500.csv  🔓_Synthetic_Data.py
.github/workflows/: dependabot-approve-and-auto-merge.yml  python-app.yml
.streamlit/: config.toml
code_snippets/: data_diagnostics copy.py  data_diagnostics.py  data_quality.py
data/: synthetic_rpad.csv
demo_notebooks/: demo_ctgan_best_setting.ipynb  demo_ctgan_constraints.ipynb  demo_ctgan_default.ipynb  demo_ctgan_metadata.ipynb  demo_ctgan_tuning.ipynb  tuning_with_ray.ipynb
pages/: 1_👀 Introduction.py  1_👋 Hi.py  1_👋 Introduction.py  2 page🍇.py  2_🎰 Generate.py  3_📊 Evaluate.py  4_📝 Conclusion.py  4_🚀 Scale.py  5_🎨 Apply.py  5_📝 Conclusion.py  6_📝 Conclusion.py  create_better_data.py  create_sd.py  metrics.py  page3.py  page_5.py
pages/application/: public_data.py
pages/evaluation/best_setting/results/: diagnostic_report.pkl
pages/evaluation/constraints/results/: rpad_data_model.pkl
pages/evaluation/legacy/: fidelity_1d_quality.py  fidelity_2d_quality.py  fidelity_3d_quality.py  fidelity_diagnostics.py  intro_metrics.py  metrics.py  privacy.py  utility.py
pages/evaluation/metadata/results/: diagnostic_report.pkl  quality_report.pkl  rpad_data_model.pkl
pages/generation/demos/: demo_ctgan_best_setting.ipynb  demo_ctgan_conditional_sampling.ipynb  demo_ctgan_constraints.ipynb  demo_ctgan_metadata.ipynb  demo_ctgan_tuning.ipynb
pages/generation/legacy/: choose_model.py  compare.py  data.py  gen_modeling.py  randomization.py  workflow.py
pages/intro/legacy/: anonymization.py  introduction_person.py  sd_cycle_page1.py  talk_about.py  whats_sd.py
pages/outro/: whats_more.py
resources/: best_hyper_params.json  diagnostic_report.pkl  quality_report_c_constraints.pkl  quality_report_default.pkl  rpad_custom_c_ep500_dsteps5.pkl  rpad_ep500_dsteps5.pkl
ressources/: metadata_rpad_data.json  rpad_custom_c_plus_ep1000_dsteps5.pkl  rpad_custom_c_plus_ep500_dsteps5.pkl
synthetic_data_talk/: __init__.py  🔓_Synthetic_Data.py
synthetic_data_talk/data/: RPAD_data_small.xlsx
synthetic_data_talk/pages/: 1_👀 Introduction.py  2_🎰 Generate.py  3_📊 Evaluate.py  4_📝 Conclusion.py  __init__.py
synthetic_data_talk/pages/evaluation/best_setting/results/: quality_report.pkl  rpad_data_model.pkl
synthetic_data_talk/pages/evaluation/constraints/results/: diagnostic_report.pkl  quality_report.pkl
synthetic_data_talk/pages/evaluation/default/results/: diagnostic_report.pkl  quality_report.pkl  rpad_data_model.pkl
synthetic_data_talk/pages/evaluation/tuning/results/: diagnostic_report.pkl  quality_report.pkl  rpad_data_model.pkl
synthetic_data_talk/tests/: test_app.py
synthetic_data_talk/tests/unit/: test_isvalid.py
synthetic_data_talk/utils/: chart_metrics.py  code_ctgan.py  default.py  example_custom_constraint.py  fixed_params.py  html_factory.py  title.py
utils/: __init__.py  chart_metrics.py  code_ctgan.py  data_gen.py  default.py  example_custom_constraint.py  fixed_params.py  helper_f.py  hide_sidepage.py  html_factory.py  title.py
