[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
requires-python = "~=3.10"
name = "synthetic_data_talk"
dynamic = ["version"]
dependencies = [
  "bs4",
  "matplotlib",
  "openpyxl",
  "pyecharts",
  "sdmetrics",
  "sdv==1.0.0",
  "setuptools",
  "streamlit",
  "streamlit_ace",
  "streamlit_echarts",
]

[project.optional-dependencies]
dev = ["ruff", "pre-commit"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4

[tool.ruff.lint]
extend-select = [
  "UP",
  "E",
  "W",
  "I",
  "N",
  "D",
  "ASYNC",
  "S",
  "BLE",
  "FBT",
  "B",
  "A",
  "COM",
  "CPY",
  "C4",
  "DTZ",
  "T10",
  "EM",
  "EXE",
  "FA",
  "ISC",
  "ICN",
  "LOG",
  "G",
  "INP",
  "T20",
  "PT",
  "Q",
  "RSE",
  "RET",
  "TID",
  "TCH",
  "INT",
  "ARG",
  "PTH",
  "TD",
  "FIX",
  "PD",
  "PL",
  "TRY",
  "NPY",
  "FURB",
  "DOC",
  "RUF"
  ]


ignore = ["D100", 
          "D103", 
          "ANN",
          "SIM",
        ]

