[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
requires-python = "~=3.10"
name = "synthetic_data_talk"
dynamic = ["version"]
dependencies = [
  "bs4",
  "matplotlib",
  "openpyxl",
  "pyecharts",
  "sdmetrics",
  "sdv==1.0.0",
  "setuptools",
  "streamlit",
  "streamlit_ace",
  "streamlit_echarts",
]

[project.urls]
Homepage = "https://github.com/Scherzan/Unlocking-Information-Creating-Synthetic-Data-for-Open-Access"
Source = "https://github.com/Scherzan/Unlocking-Information-Creating-Synthetic-Data-for-Open-Access"

[tool.hatch.version]
path = "synthetic_data_talk/__init__.py"


[project.optional-dependencies]
dev = ["ruff", "pre-commit", "pytest", "coverage", "pip-tools"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4

[tool.ruff.lint]
extend-select = [
  "UP",
  "E",
  "W",
  "I",
  "N",
  "D",
  "ASYNC",
  "S",
  "BLE",
  "FBT",
  "B",
  "A",
  "COM",
  "CPY",
  "C4",
  "DTZ",
  "T10",
  "EM",
  "EXE",
  "FA",
  "ISC",
  "ICN",
  "LOG",
  "G",
  "INP",
  "T20",
  "PT",
  "Q",
  "RSE",
  "RET",
  "TID",
  "TCH",
  "INT",
  "ARG",
  "PTH",
  "TD",
  "FIX",
  "PD",
  "PL",
  "TRY",
  "NPY",
  "FURB",
  "DOC",
  "RUF"
  ]


ignore = ["D100", # too lazy to document all modules for now
          "D103", # too lazy to document all classes for now
          "D104", # too lazy to document all public packages for now
          "N999", # does not allow emojis in file name but wanted
          "S102", # does not allow exec which needed for now
          "S101" # does not allow for assert in tests
        ]

[lint.per-file-ignores]
"*.ipynb" = ["E501", "E402", "W291", "W293", "COM812]
